# optical_flow_disturbance_rejection

./: .gitignore  .gitmodules  Dockerfile  OpticalFlowStack.drawio  README.md  docker-compose.yaml  setup.sh
scripts/: NOTES  docker_ros.service  optic_flow.service  run_docker.sh  run_docker1.sh  run_optic_flow.sh  setup.sh
scripts/matlab/: basic_lqr.m  dmdc.m  mrdmc.py
scripts/matlab/old_v/: motr.csv  posn.csv
src/host/: CMakeLists.txt  camera_module3.cpp  images_to_video.py  luxonis_camera.cpp  luxonis_debug.cpp  main.cpp  setup.sh  shm_reader_test.cpp  shm_writer_test.cpp
src/host/include/: camera_base.h  camera_module3.h  luxonis_camera.h  optical_flow_constants.h
src/ros_ws/: commands.sh  dependency.repos
src/ros_ws/src/chirp_sysid/: package.xml  setup.cfg  setup.py
src/ros_ws/src/chirp_sysid/chirp_sysid/: chirp_sysid_node.py
src/ros_ws/src/mocap_to_mavros/: package.xml  setup.cfg  setup.py
src/ros_ws/src/mocap_to_mavros/mocap_to_mavros/: relay_node.py
src/ros_ws/src/optical_flow/: CMakeLists.txt  package.xml
src/ros_ws/src/optical_flow/include/optical_flow/: optical_flow_constants.h
src/ros_ws/src/optical_flow/src/: flow_aggregator_node.cpp  optical_flow_node.cpp
src/ros_ws/src/optical_flow_bringup/: CMakeLists.txt  package.xml
src/ros_ws/src/optical_flow_bringup/config/: xbox.config.yaml
src/ros_ws/src/optical_flow_bringup/launch/: bringup.launch.py  joystick.launch.py  mocap.launch.py
src/ros_ws/src/optical_flow_msgs/: CMakeLists.txt  package.xml
src/ros_ws/src/optical_flow_msgs/msg/: Flows.msg  RpiStatus.msg
src/ros_ws/src/rpi_status/: package.xml  setup.cfg  setup.py
src/ros_ws/src/rpi_status/rpi_status/: rpi_status_node.py  vcgen.py
